# hictkpy

./: .clang-tidy  .codespellrc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  MANIFEST.in  README.md  conanfile.py  conanfile.txt  pyproject.toml  setup.cfg  setup.py  setup_conan_environments.sh  test.py  test2.py
.github/: actionlint.yaml  dependabot.yml
.github/workflows/: build-conan-deps-linux.yml  build-conan-deps-macos.yml  build-conan-deps-windows.yml  build-conan-deps.yml  build-wheels.yml  ci.yml  codeql-actions.yml  codeql-cpp.yml  codeql-cpp.yml.disabled  codeql-python.yml  fuzzy-testing.yml  fuzzy-testing.yml.disabled  lint-cff.yml  lint-cff.yml.disabled  pip.yml  wheels.yml
benchmarks/: bin_table_merge_bin_ids.py  bin_table_merge_coords.py
cmake/: .clang-tidy.in  CompilerWarnings.cmake  FetchExternalDeps.cmake  NBStubgen.cmake  NanobindStubgen.cmake.in  conan_provider.cmake
cmake/modules/: FindArrow.cmake  FindPyarrow.cmake
docs/: README.md  conf.py  creating_cool_hic_files.rst  hictkpy.rst  index.rst  installation.rst  multithreading_and_multiprocessing.rst  patch_project_for_rtd.py  quickstart.rst  requirements.conda.txt  requirements.txt  setup_build_env_rtd.sh  update_conan_config_rtd.py  update_index_links.py
docs/api/: cooler.rst  generic.rst  hic.rst  index.rst  logging.rst
docs/assets/: heatmap_001.avif  heatmap_002.avif
docs/rtd/: patch_project_for_rtd.py  requirements.conda.txt  setup_build_env_rtd.sh
hictkpy/: __init__.py
src/: CMakeLists.txt  bin_table.cpp  common.cpp  common.hpp  cooler_file_writer.cpp  file.cpp  hic_file_writer.cpp  hictkpy.cpp  hictkpy_bin_table.cpp  hictkpy_cooler.cpp  hictkpy_cooler.hpp  hictkpy_file.cpp  hictkpy_file.hpp  hictkpy_file_creation.cpp  hictkpy_hic.cpp  hictkpy_hic.hpp  hictkpy_multires_file.cpp  hictkpy_pixel_selector.cpp  hictkpy_singlecell_file.cpp  logger.cpp  multires_file.cpp  pixel_aggregator_impl.hpp  pixel_selector.cpp  pixel_table.cpp  pixel_table_bg2.cpp  pixel_table_coo.cpp  pixel_table_impl.hpp  plotting_helpers.cpp  reference.cpp  singlecell_file.cpp  table.cpp  table_impl.hpp  to_pyarrow.cpp  type.cpp
src/cpp/: CMakeLists.txt
src/cpp/arrow/: CMakeLists.txt
src/cpp/bin_table/: CMakeLists.txt
src/cpp/bin_table/include/hictkpy/: bin_table.hpp
src/cpp/common/: CMakeLists.txt
src/cpp/common/include/hictkpy/: common.hpp
src/cpp/file/: CMakeLists.txt  file.cpp
src/cpp/file/include/hictkpy/: file.hpp
src/cpp/file_writer/: CMakeLists.txt  cooler_file_writer.cpp  file_writer_helpers.cpp  hic_file_writer.cpp
src/cpp/file_writer/include/cooler/hictkpy/: cooler_file_writer.hpp
src/cpp/file_writer/include/helpers/hictkpy/: file_writer_helpers.hpp
src/cpp/file_writer/include/hic/hictkpy/: hic_file_writer.hpp
src/cpp/locking/: CMakeLists.txt  locking.cpp
src/cpp/locking/include/hictkpy/: locking.hpp
src/cpp/logger/: CMakeLists.txt  logger.cpp
src/cpp/logger/include/hictkpy/: logger.hpp
src/cpp/nanobind/: CMakeLists.txt  nanobind.cpp  nanobind_impl.hpp
src/cpp/nanobind/include/hictkpy/: nanobind.hpp
src/cpp/numpy/: CMakeLists.txt  to_numpy_impl.hpp
src/cpp/numpy/include/hictkpy/: to_numpy.hpp
src/cpp/pixel/: CMakeLists.txt  pixel.cpp  pixel_impl.hpp
src/cpp/pixel/include/hictkpy/: pixel.hpp
src/cpp/pixel_aggregator/: CMakeLists.txt  pixel_aggregator_impl.hpp
src/cpp/pixel_aggregator/include/hictkpy/: pixel_aggregator.hpp
src/cpp/pixel_selector/: CMakeLists.txt  pixel_selector.cpp
src/cpp/reference/: CMakeLists.txt  reference.cpp
src/cpp/table/: CMakeLists.txt  pixel_table_bg2.cpp  pixel_table_coo.cpp  pixel_table_impl.hpp  table.cpp  table_impl.hpp
src/cpp/table/include/pixel_table/hictkpy/: pixel_table.hpp
src/cpp/table/include/table/hictkpy/: table.hpp
src/cpp/type/: CMakeLists.txt  type.cpp
src/cpp/type/include/hictkpy/: type.hpp
src/hictkpy/: __init__.py  hictkpy.pyi  plot.py
src/include/hictkpy/: bin_table.hpp  common.hpp  cooler.hpp  cooler_file_writer.hpp  cooler_mtx.hpp  dynamic_1d_array.hpp  file.hpp  file_creation.hpp  file_writer_helpers.hpp  hic.hpp  hic_file_writer.hpp  locking.hpp  logger.hpp  multires_file.hpp  nanobind.hpp  pixel.hpp  pixel_aggregator.hpp  pixel_selector.hpp  pixel_table.hpp  pixel_table_helpers.hpp  plotting_helpers.hpp  reference.hpp  singlecell_file.hpp  suppress_warnings.hpp  table.hpp  table_helpers.hpp  to_pyarrow.hpp  type.hpp  variant.hpp
src/include/hictkpy/impl/: dynamic_1d_array_impl.hpp
test/: helpers.py  test_bin_table.py  test_fetch.py  test_fetch_accessors.py  test_fetch_dense.py  test_fetch_describe.py  test_fetch_df.py  test_fetch_iters.py  test_fetch_kurtosis.py  test_fetch_max.py  test_fetch_mean.py  test_fetch_min.py  test_fetch_nnz.py  test_fetch_skewness.py  test_fetch_sparse.py  test_fetch_sum.py  test_fetch_variance.py  test_file_accessors.py  test_file_creation_cool.py  test_file_creation_hic.py  test_file_ctors.py  test_file_ctx_manager.py  test_file_validators.py  test_multires_file_accessors.py  test_multires_file_ctx_manager.py  test_pixel.py  test_pixel_selector_accessors.py  test_singlecell_file_accessors.py  test_singlecell_file_ctx_manager.py
test/cpp/: CMakeLists.txt  pixel_table_test.cpp
test/data/: cooler_test_file.cool  cooler_test_file.mcool  hic_test_file.hic
test/python/: helpers.py  test_bin_table.py  test_fetch_dense.py  test_fetch_describe.py  test_fetch_df.py  test_fetch_iters.py  test_fetch_kurtosis.py  test_fetch_max.py  test_fetch_mean.py  test_fetch_min.py  test_fetch_nnz.py  test_fetch_skewness.py  test_fetch_sparse.py  test_fetch_sum.py  test_fetch_variance.py  test_file_accessors.py  test_file_creation_cool.py  test_file_creation_hic.py  test_file_ctors.py  test_file_ctx_manager.py  test_file_validators.py  test_multires_file_accessors.py  test_multires_file_ctx_manager.py  test_pixel.py  test_pixel_selector_accessors.py  test_singlecell_file_accessors.py  test_singlecell_file_ctx_manager.py
test/scripts/: compute_stats_for_testing.py  fuzzer.py  fuzzer_data_races.py  (+1 more)
(+17 files in other folders)
