# Copyright (C) 2023 Roberto Rossini <roberros@uio.no>
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
  "conan>=2.0.5",
  "numpy",
  "pandas>=2.1.0,!=2.2.0",
  "pyarrow==17.0.0",
  "scikit-build-core>=0.10",
  "scipy",
  "typing_extensions",
]

build-backend = "scikit_build_core.build"

[project]
name = "hictkpy"
dynamic = ["version"]
description = "Python bindings for hictk: read and write .cool and .hic files directly from Python"
readme = "README.md"
authors = [
  {name = "Roberto Rossini", email = "roberros@uio.no"}
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: MIT License"
]

dependencies = [
  "numpy",
  "pandas>=2.1.0,!=2.2.0",
  "pyarrow>=14",
  "scipy",
]

optional-dependencies.test = [
  "pytest>=8.0"
]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/_version.py"]
wheel.expand-macos-universal-tags = true
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
BUILD_SHARED_LIBS = "OFF"
CMAKE_OSX_DEPLOYMENT_TARGET = "10.15"
CMAKE_PROJECT_TOP_LEVEL_INCLUDES = { env="HICTKPY_PROJECT_TOP_LEVEL_INCLUDES", default="cmake/conan_provider.cmake" }
CONAN_INSTALL_ARGS = "--settings=compiler.cppstd=17;--settings=build_type=Release;--build=missing;--build=b2/*;--update;--options=*/*:shared=False"
HICTK_BUILD_BENCHMARKS = "OFF"
HICTK_BUILD_EXAMPLES = "OFF"
HICTK_BUILD_TOOLS = "OFF"
HICTK_ENABLE_FUZZY_TESTING = "OFF"
HICTK_ENABLE_GIT_VERSION_TRACKING = "OFF"
HICTK_ENABLE_TESTING = "OFF"
HICTK_WITH_ARROW = "ON"
HICTK_WITH_EIGEN = "ON"

[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore:(ast.Str|Attribute s|ast.NameConstant|ast.Num) is deprecated:DeprecationWarning:_pytest",
  "ignore:datetime\\.datetime\\.utcfromtimestamp\\(\\)*:DeprecationWarning",  # https://github.com/pytest-dev/pytest/issues/11528
]
python_files = [
  "test/test*.py"
]
testpaths = [
  "test/"
]

[tool.cibuildwheel]
skip = ["cp313*", "*musllinux*", "pp*"]
test-command = "python -m pytest {project}/test"
test-extras = ["test"]
test-skip = ["cp313*", "*universal2", "pp*"]

# Setuptools bug causes collision between pypy and cpython artifacts
before-build = [
  "rm -rf '{project}/build'",
]
environment = { PIP_VERBOSE=1 }

# We are using static linking, thus repairing wheels is not necessary.
repair-wheel-command = ""

[tool.ruff]
extend-select = [
  "B", # flake8-bugbear
  "B904",
  "I", # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP", # pyupgrade
]
extend-ignore = [
  "E501", # Line too long
]
target-version = "py39"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
profile = "black"
