# Copyright (C) 2025 Roberto Rossini <roberros@uio.no>
#
# SPDX-License-Identifier: MIT

add_subdirectory(arrow)
add_subdirectory(bin_table)
add_subdirectory(common)
add_subdirectory(file)
add_subdirectory(file_writer)
add_subdirectory(locking)
add_subdirectory(logger)
add_subdirectory(nanobind)
add_subdirectory(numpy)
add_subdirectory(pixel)
add_subdirectory(pixel_aggregator)
add_subdirectory(pixel_selector)
add_subdirectory(reference)
add_subdirectory(table)
add_subdirectory(type)
